<resources>
    <string name="app_name">Taskr</string>
    <string name="personal_feed">Personal Feed</string>
    <string name="public_feed">Public Feed</string>
    <string name="title_calendar">Calendar</string>
    <string name="create">Create task</string>
    <string name="icon_description">Task creator\'s icon</string>
    <string name="contacts">Contacts</string>
    <string name="title_activity_maps">Map</string>
    <string name="tab_text_1">Register</string>
    <string name="tab_text_2">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="google_maps_key">AIzaSyDwM42eGcN2nLPGLa11y3fFIG55OGL28Wg</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="assign_to">Assign To</string>
    <string name="priority">Priority</string>
    <string name="completed_by">Completed By</string>
    <string name="accept_task">Accept Task</string>
    <string name="logout">Logout</string>
    <string name="leave_task">Leave Task</string>
    <string name="set_creator">Creator: %s</string>
    <string name="set_deadline">Deadline: %s</string>
    <string name="set_priority">Priority: %s</string>
    <string name="set_description">Description: %s</string>
    <string name="sort_by">Sort by:</string>

    <string name="facebook_app_id">2551450934892886</string>
    <string name="fb_login_protocol_scheme">fb2551450934892886</string>
    <string name="share_task">Share</string>
    <string name="location">Location</string>
    <string name="task_location">Task Location</string>
    <string name="due_date">Due Date</string>

    <string name="add_friends">Add friends</string>
    <string name="remove_friend">Remove friend</string>
</resources>
