<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_personalFeed">

    <fragment
        android:id="@+id/navigation_personalFeed"
        android:name="com.example.androidcapstone.ui.personal_feed.PersonalFeedFragment"
        android:label="@string/personal_feed"
        tools:layout="@layout/fragment_personal" />

    <fragment
        android:id="@+id/navigation_publicFeed"
        android:name="com.example.androidcapstone.ui.public_feed.PublicFeedFragment"
        android:label="@string/public_feed"
        tools:layout="@layout/fragment_public" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.androidcapstone.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_create_task"
        android:name="com.example.androidcapstone.ui.create_task.CreateTaskFragment"
        android:label="@string/create"
        tools:layout="@layout/fragment_create_task" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.androidcapstone.ui.contacts.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />
</navigation>